feat: Correction after roman's review 5th batch